@@ -121,6 +121,15 @@ Changes to the Mercury standard library
     - func `keys_as_set/1`
     - pred `keys_as_set/2`
 
+### Changes to the `multi_map` module
+
+* The following predicates and functions have been added:
+
+    - func `sorted_keys/1`
+    - pred `sorted_keys/2`
+    - func `keys_as_set/1`
+    - pred `keys_as_set/2`
+
 ### Changes to the `thread.channel` module
 
 * The following predicate has been deprecated and will be removed in a future
